<resources>
    <string name="app_name">Synergy</string>
    <string name="title_activity_new_request">NewRequestActivity</string>

    <!-- Strings for forms -->
    <string name="hint_title">Title</string>
    <string name="hint_description">Description</string>
    <string name="hint_ncomponents">Number of components</string>
    <string name="hint_tags">Tags</string>
    <string name="location">Universitat de Barcelona</string>
    <string name="hint_mail">Mail</string>
    <string name="hint_confirma_mail">Confirm mail</string>
    <string name="hint_confirma_password">Confirm Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_new_mail">New Mail</string>
    <string name="hint_password">Current Password*</string>
    <string name="btn_confirm">Send</string>
    <!---->

    <!-- Strings for titles -->
    <string name="title_NewOffer">New Offer</string>
    <string name="title_NewRequest">New Request</string>
    <string name="title_NewProject">New Project</string>
    <string name="title_Opciones">Options</string>

    <!-- Strings for icons -->
    <string name="icon_location">&#xf3c5;</string>

    <!-- Strings for sections -->
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_delet">Delet</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_tabbed___example">Tabbed_Activity_Example</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="sign_in_label1">Don\'t have an account?</string>
    <string name="sign_in_label2"><u>Sign in</u></string>
    <string name="login_button_label"><b>Log In</b></string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password*</string>
    <string name="password_repeat_hint">Repeat your password*</string>
    <string name="first_name_hint">First Name*</string>
    <string name="last_name_hint">Last Name*</string>
    <string name="email_hint">Email*</string>
    <string name="email_repeat_hint">Repeat your email*</string>
    <string name="create_account"><b>Create your account</b></string>
    <string name="confirm_label">Confirm</string>
    <string name="upload_photo"><b>Upload a profile picture</b></string>
    <string name="desc_sign_in_label"><b>Write about yourself</b></string>
    <string name="hashtag_sign_in_label"><b>Add your skills</b></string>
    <string name="camera_button_text">CAMERA</string>
    <string name="gallery_button_text">GALLERY</string>
    <string name="placeholder">Placeholder</string>

    <string name="placeholder_image">@drawable/logo</string>
    <string name="title_offers">Offers</string>
    <string name="title_requests">Requests</string>
    <string name="title_projects">Projects</string>
    <string name="hint_skills">Skills</string>
    <string name="title_modify_offer">Modify Offer</string>
    <string name="title_ModifyRequest">Modify Request</string>
    <string name="title_alien_offer">Offer</string>
    <string name="title_alien_request">Request</string>
    <string name="title_inbox">Inbox</string>
    <string name="title_userProfile">My Profile</string>
    <string name="password_hint_login">Password</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="hint_new_mail_repeat">Repeat Mail</string>


</resources>
