<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/signin_layout_1_main_lnlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/signin_layout_1_create_account_txtvw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="@string/create_account"
            android:textSize="32dp" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_layout_firstname_txtietxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/input_margin_top"
            android:hint="@string/first_name_hint"
            android:inputType="text"
            android:textSize="@dimen/text_medium" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_layout_lastname_txtietxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/input_margin_top"
            android:hint="@string/last_name_hint"
            android:inputType="text"
            android:textSize="@dimen/text_medium" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginTop="@dimen/input_margin_top"
            android:background="@drawable/rule"/>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_layout_email_txtietxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/input_margin_top"
            android:hint="@string/email_hint"
            android:inputType="text"
            android:textSize="@dimen/text_medium" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_layout_repeat_email_txtietxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/input_margin_top"
            android:hint="@string/email_repeat_hint"
            android:inputType="text"
            android:textSize="@dimen/text_medium" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginTop="@dimen/input_margin_top"
            android:background="@drawable/rule"/>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_layout_password_txtietxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/input_margin_top"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textSize="@dimen/text_medium" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_layout_repeat_password_txtietxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/input_margin_top"
            android:hint="@string/password_repeat_hint"
            android:inputType="textPassword"
            android:textSize="@dimen/text_medium" />

    </LinearLayout>

    <Button
        android:id="@+id/signin_layout_1_confirm_btn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="64dp"
        android:layout_marginStart="64dp"
        android:text="@string/confirm_label"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
</android.support.constraint.ConstraintLayout>