<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/main_container_padding"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/newPost_til_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:hint="@string/hint_title"
        android:paddingBottom="@dimen/margin"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/newPost_etxt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:orientation="horizontal">

        <ub.edu.pis2017.pis_17.synergy.View.IconTextView
            android:id="@+id/newPost_icon_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/icon_location"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/tvSearchCaption"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/tvSearchCaption"
            android:layout_width="243dp"
            android:layout_height="22dp"
            android:layout_marginEnd="8dp"
            android:text="@string/location"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/newPost_icon_location" />
    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/newPost_til_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/borders"
        android:padding="@dimen/padding_small"
        android:layout_marginTop="@dimen/margin"
        android:hint="@string/hint_description">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/newPost_etxt_description"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:inputType="textMultiLine"
            android:lines="6"
            android:scrollbars="vertical" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/newPost_til_tags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/borders"
        android:padding="@dimen/padding_small"
        android:layout_marginTop="@dimen/margin"
        android:hint="@string/hint_tags">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/newPost_etxt_tags"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:inputType="textMultiLine"
            android:lines="6"
            android:scrollbars="vertical" />
    </android.support.design.widget.TextInputLayout>

</LinearLayout>
</android.support.v4.widget.NestedScrollView>