<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/main_container_padding"
    android:paddingRight="@dimen/main_container_padding">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/newProject_til_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:hint="@string/hint_title"
        android:paddingBottom="@dimen/margin"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/newProject_etxt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="right">

        <ub.edu.pis2017.pis_17.synergy.View.IconTextView
            android:id="@+id/newProject_icon_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/icon_location"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/tvSearchCaption"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/tvSearchCaption"
            android:layout_width="243dp"
            android:layout_height="22dp"
            android:layout_marginEnd="8dp"
            android:text="@string/location"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/newProject_til_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/borders"
        android:padding="@dimen/padding_small"
        android:layout_marginTop="@dimen/margin"
        android:hint="@string/hint_description">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/newProject_etxt_description"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:inputType="textMultiLine"
            android:lines="6"
            android:scrollbars="vertical" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/newProject_til_tags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/borders"
        android:padding="@dimen/padding_small"
        android:layout_marginTop="@dimen/margin"
        android:hint="@string/hint_tags">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/newProject_etxt_tags"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:inputType="textMultiLine"
            android:lines="6"
            android:scrollbars="vertical" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/newProject_til_nComponents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:hint="@string/hint_ncomponents">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/newProject_etxt_nComponents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>
    </android.support.design.widget.TextInputLayout>


    <!-- TODO añadir lista de componentes -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:padding="@dimen/main_container_padding">

        <EditText
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Artista"
            tools:text="Artista" />
        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <EditText
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Informático" />
        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <EditText
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Fotografo" />
    </LinearLayout>
</LinearLayout>
</android.support.v4.widget.NestedScrollView>